// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`search/trust.tsx snapshots > enables a real Message button once a conversation exists for the booking 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 8,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "borderBottomColor": "#E4EDFB",
          "borderBottomWidth": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 44,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "gap": 8,
            "minWidth": 40,
          }
        }
      >
        <Pressable
          accessibilityLabel="common:actions.back"
          accessibilityRole="button"
          hitSlop={8}
          onPress={[Function]}
          style={[Function]}
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#14201B"
            importantForAccessibility="no-hide-descendants"
            name="chevron-back"
            size={20}
          />
        </Pressable>
      </View>
      <View
        accessibilityRole="header"
        style={
          {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 23.400000000000002,
              },
              {
                "color": "#14201B",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.title
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "minWidth": 40,
            },
            {
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
  <ScrollView
    contentContainerStyle={
      {
        "gap": 12,
        "padding": 16,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View
      style={
        {
          "alignItems": "center",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "position": "relative",
          }
        }
      >
        <View
          accessibilityLabel="Photo de Mehdi Gharbi"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 52,
                "height": 104,
                "width": 104,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "600",
                },
                {
                  "color": "#14201B",
                  "fontSize": 42,
                },
              ]
            }
          >
            MG
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 30,
                "fontWeight": "700",
                "lineHeight": 36,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          Mehdi
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "height": 100,
        }
      }
    />
  </ScrollView>
  <View
    style={
      [
        {
          "borderTopWidth": 1,
          "gap": 8,
          "paddingHorizontal": 16,
          "paddingTop": 12,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderTopColor": "#E4EDFB",
          "paddingBottom": 8,
        },
      ]
    }
  >
    <Pressable
      accessibilityLabel="common:actions.message"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "disabled": false,
        }
      }
      disabled={false}
      onPress={[Function]}
      style={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#FFFFFF"
          importantForAccessibility="no-hide-descendants"
          name="chatbubble-outline"
          size={16}
        />
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontWeight": "600",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          common:actions.message
        </Text>
      </View>
    </Pressable>
  </View>
</View>
`;

exports[`search/trust.tsx snapshots > renders a brand-new passenger profile (no rider trust data yet) 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 8,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "borderBottomColor": "#E4EDFB",
          "borderBottomWidth": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 44,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "gap": 8,
            "minWidth": 40,
          }
        }
      >
        <Pressable
          accessibilityLabel="common:actions.back"
          accessibilityRole="button"
          hitSlop={8}
          onPress={[Function]}
          style={[Function]}
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#14201B"
            importantForAccessibility="no-hide-descendants"
            name="chevron-back"
            size={20}
          />
        </Pressable>
      </View>
      <View
        accessibilityRole="header"
        style={
          {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 23.400000000000002,
              },
              {
                "color": "#14201B",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.title
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "minWidth": 40,
            },
            {
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
  <ScrollView
    contentContainerStyle={
      {
        "gap": 12,
        "padding": 16,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View
      style={
        {
          "alignItems": "center",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "position": "relative",
          }
        }
      >
        <View
          accessibilityLabel="Photo de Mehdi Gharbi"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 52,
                "height": 104,
                "width": 104,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "600",
                },
                {
                  "color": "#14201B",
                  "fontSize": 42,
                },
              ]
            }
          >
            MG
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 30,
                "fontWeight": "700",
                "lineHeight": 36,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          Mehdi
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "height": 100,
        }
      }
    />
  </ScrollView>
  <View
    style={
      [
        {
          "borderTopWidth": 1,
          "gap": 8,
          "paddingHorizontal": 16,
          "paddingTop": 12,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderTopColor": "#E4EDFB",
          "paddingBottom": 8,
        },
      ]
    }
  >
    <Pressable
      accessibilityLabel="common:actions.message"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "disabled": true,
        }
      }
      disabled={true}
      onPress={[Function]}
      style={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8B93A3"
          importantForAccessibility="no-hide-descendants"
          name="chatbubble-outline"
          size={16}
        />
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontWeight": "600",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#8B93A3",
              },
            ]
          }
        >
          common:actions.message
        </Text>
      </View>
    </Pressable>
    <Text
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 18,
          },
          {
            "color": "#8B93A3",
            "textAlign": "center",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      search:trust.messageAvailabilityDriver
    </Text>
  </View>
</View>
`;

exports[`search/trust.tsx snapshots > renders a passenger profile with real rider trust stats 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 8,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "borderBottomColor": "#E4EDFB",
          "borderBottomWidth": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 44,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "gap": 8,
            "minWidth": 40,
          }
        }
      >
        <Pressable
          accessibilityLabel="common:actions.back"
          accessibilityRole="button"
          hitSlop={8}
          onPress={[Function]}
          style={[Function]}
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#14201B"
            importantForAccessibility="no-hide-descendants"
            name="chevron-back"
            size={20}
          />
        </Pressable>
      </View>
      <View
        accessibilityRole="header"
        style={
          {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 23.400000000000002,
              },
              {
                "color": "#14201B",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.title
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "minWidth": 40,
            },
            {
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
  <ScrollView
    contentContainerStyle={
      {
        "gap": 12,
        "padding": 16,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View
      style={
        {
          "alignItems": "center",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "position": "relative",
          }
        }
      >
        <View
          accessibilityLabel="Photo de Mehdi Gharbi"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 52,
                "height": 104,
                "width": 104,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "600",
                },
                {
                  "color": "#14201B",
                  "fontSize": 42,
                },
              ]
            }
          >
            MG
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 30,
                "fontWeight": "700",
                "lineHeight": 36,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          Mehdi
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "borderWidth": 1,
              "flex": 1,
              "gap": 4,
              "paddingVertical": 12,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 24,
                  "fontWeight": "600",
                  "lineHeight": 28.799999999999997,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            4.3
          </Text>
          <Ionicons
            accessibilityElementsHidden={true}
            color="#2E9E6C"
            importantForAccessibility="no-hide-descendants"
            name="star"
            size={16}
          />
        </View>
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 18,
              },
              {
                "color": "#8B93A3",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.ratingLabel
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "borderWidth": 1,
              "flex": 1,
              "gap": 4,
              "paddingVertical": 12,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 28.799999999999997,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          9
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 18,
              },
              {
                "color": "#8B93A3",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.tripsLabel
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 8,
        }
      }
    />
    <View
      style={
        {
          "height": 100,
        }
      }
    />
  </ScrollView>
  <View
    style={
      [
        {
          "borderTopWidth": 1,
          "gap": 8,
          "paddingHorizontal": 16,
          "paddingTop": 12,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderTopColor": "#E4EDFB",
          "paddingBottom": 8,
        },
      ]
    }
  >
    <Pressable
      accessibilityLabel="common:actions.message"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "disabled": true,
        }
      }
      disabled={true}
      onPress={[Function]}
      style={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8B93A3"
          importantForAccessibility="no-hide-descendants"
          name="chatbubble-outline"
          size={16}
        />
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontWeight": "600",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#8B93A3",
              },
            ]
          }
        >
          common:actions.message
        </Text>
      </View>
    </Pressable>
    <Text
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 18,
          },
          {
            "color": "#8B93A3",
            "textAlign": "center",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      search:trust.messageAvailabilityDriver
    </Text>
  </View>
</View>
`;

exports[`search/trust.tsx snapshots > renders a verified driver profile with real stats, pills and vehicle 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 8,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "borderBottomColor": "#E4EDFB",
          "borderBottomWidth": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 44,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "gap": 8,
            "minWidth": 40,
          }
        }
      >
        <Pressable
          accessibilityLabel="common:actions.back"
          accessibilityRole="button"
          hitSlop={8}
          onPress={[Function]}
          style={[Function]}
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#14201B"
            importantForAccessibility="no-hide-descendants"
            name="chevron-back"
            size={20}
          />
        </Pressable>
      </View>
      <View
        accessibilityRole="header"
        style={
          {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 23.400000000000002,
              },
              {
                "color": "#14201B",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.title
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "minWidth": 40,
            },
            {
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
  <ScrollView
    contentContainerStyle={
      {
        "gap": 12,
        "padding": 16,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View
      style={
        {
          "alignItems": "center",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "position": "relative",
          }
        }
      >
        <View
          accessibilityLabel="Photo de Mehdi Gharbi"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 52,
                "height": 104,
                "width": 104,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "600",
                },
                {
                  "color": "#14201B",
                  "fontSize": 42,
                },
              ]
            }
          >
            MG
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 13,
                "borderWidth": 2,
                "bottom": 0,
                "height": 26,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "width": 26,
              },
              {
                "backgroundColor": "#2E9E6C",
                "borderColor": "#FFFFFF",
              },
            ]
          }
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#0D1512"
            importantForAccessibility="no-hide-descendants"
            name="checkmark"
            size={16}
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 30,
                "fontWeight": "700",
                "lineHeight": 36,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          Mehdi
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "#E4EDFB",
              },
            ]
          }
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#5B6572"
            importantForAccessibility="no-hide-descendants"
            name="shield-checkmark"
            size={16}
          />
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 18,
                },
                {
                  "color": "#5B6572",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            search:trust.verified
          </Text>
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 21,
            },
            {
              "color": "#8B93A3",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            undefined,
          ]
        }
      >
        search:trust.speaks
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "borderWidth": 1,
              "flex": 1,
              "gap": 4,
              "paddingVertical": 12,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 24,
                  "fontWeight": "600",
                  "lineHeight": 28.799999999999997,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            4.7
          </Text>
          <Ionicons
            accessibilityElementsHidden={true}
            color="#2E9E6C"
            importantForAccessibility="no-hide-descendants"
            name="star"
            size={16}
          />
        </View>
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 18,
              },
              {
                "color": "#8B93A3",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.ratingLabel
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "borderWidth": 1,
              "flex": 1,
              "gap": 4,
              "paddingVertical": 12,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 28.799999999999997,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          128
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 18,
              },
              {
                "color": "#8B93A3",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.tripsLabel
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 9999,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#E4EDFB",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#2E9E6C"
          importantForAccessibility="no-hide-descendants"
          name="thumbs-up"
          size={16}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.pillReliable
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 9999,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#E4EDFB",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#2E9E6C"
          importantForAccessibility="no-hide-descendants"
          name="ribbon-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.pillTopRated
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderRadius": 16,
            "borderWidth": 1,
            "gap": 8,
            "padding": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E4EDFB",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#2E9E6C"
          importantForAccessibility="no-hide-descendants"
          name="shield-checkmark-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.verificationsTitle
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#2E9E6C"
          importantForAccessibility="no-hide-descendants"
          name="person-circle-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#5B6572",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.verificationIdentity
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#2E9E6C"
          importantForAccessibility="no-hide-descendants"
          name="document-text-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#5B6572",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.verificationDocuments
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#2E9E6C"
          importantForAccessibility="no-hide-descendants"
          name="car-sport-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#5B6572",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.verificationVehicle
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderRadius": 16,
            "borderWidth": 1,
            "gap": 8,
            "padding": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E4EDFB",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8B93A3"
          importantForAccessibility="no-hide-descendants"
          name="information-circle-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.aboutTitle
        </Text>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 21,
            },
            {
              "color": "#5B6572",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            undefined,
          ]
        }
      >
        Conducteur ponctuel, trajets Tunis-Nabeul tous les jours.
      </Text>
    </View>
    <View
      style={
        [
          {
            "borderRadius": 16,
            "borderWidth": 1,
            "gap": 8,
            "padding": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E4EDFB",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8B93A3"
          importantForAccessibility="no-hide-descendants"
          name="car-sport-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          common:terms.vehicle
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View>
          <Text
            style={
              [
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "fontWeight": "600",
                },
              ]
            }
          >
            Gris
             
            Volkswagen
             
            Golf
          </Text>
          <View
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "marginTop": 4,
                  "paddingHorizontal": 8,
                  "paddingVertical": 2,
                },
                {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#E4EDFB",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#5B6572",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  {
                    "letterSpacing": 1.5,
                  },
                ]
              }
            >
              123 TU 4567
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "borderWidth": 1,
                "height": 56,
                "justifyContent": "center",
                "width": 56,
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E4EDFB",
              },
            ]
          }
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#8B93A3"
            importantForAccessibility="no-hide-descendants"
            name="car-sport"
            size={32}
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderRadius": 16,
            "borderWidth": 1,
            "gap": 8,
            "padding": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E4EDFB",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8B93A3"
          importantForAccessibility="no-hide-descendants"
          name="chatbubble-ellipses-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "flex": 1,
              },
            ]
          }
        >
          search:trust.reviewsTitle
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#2E9E6C"
            importantForAccessibility="no-hide-descendants"
            name="star"
            size={16}
          />
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            4.7
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#5B6572",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            search:trust.ratingLabel
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#2E9E6C"
            importantForAccessibility="no-hide-descendants"
            name="time-outline"
            size={16}
          />
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            95 %
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#5B6572",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            search:trust.punctualityLabel
          </Text>
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 21,
            },
            {
              "color": "#8B93A3",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            undefined,
          ]
        }
      >
        search:trust.reviewsPrivate
      </Text>
    </View>
    <View
      style={
        {
          "height": 100,
        }
      }
    />
  </ScrollView>
  <View
    style={
      [
        {
          "borderTopWidth": 1,
          "gap": 8,
          "paddingHorizontal": 16,
          "paddingTop": 12,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderTopColor": "#E4EDFB",
          "paddingBottom": 8,
        },
      ]
    }
  >
    <Pressable
      accessibilityLabel="common:actions.message"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "disabled": true,
        }
      }
      disabled={true}
      onPress={[Function]}
      style={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8B93A3"
          importantForAccessibility="no-hide-descendants"
          name="chatbubble-outline"
          size={16}
        />
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontWeight": "600",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#8B93A3",
              },
            ]
          }
        >
          common:actions.message
        </Text>
      </View>
    </Pressable>
    <Text
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 18,
          },
          {
            "color": "#8B93A3",
            "textAlign": "center",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      search:trust.messageAvailability
    </Text>
  </View>
</View>
`;

exports[`search/trust.tsx snapshots > renders the "profile not found" state 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 8,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "borderBottomColor": "#E4EDFB",
          "borderBottomWidth": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 44,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "gap": 8,
            "minWidth": 40,
          }
        }
      >
        <Pressable
          accessibilityLabel="common:actions.back"
          accessibilityRole="button"
          hitSlop={8}
          onPress={[Function]}
          style={[Function]}
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#14201B"
            importantForAccessibility="no-hide-descendants"
            name="chevron-back"
            size={20}
          />
        </Pressable>
      </View>
      <View
        accessibilityRole="header"
        style={
          {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 23.400000000000002,
              },
              {
                "color": "#14201B",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.title
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "minWidth": 40,
            },
            {
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
  <View
    accessibilityRole="alert"
    accessible={true}
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "paddingHorizontal": 20,
        "paddingVertical": 32,
      }
    }
  >
    <View
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 9999,
            "height": 64,
            "justifyContent": "center",
            "marginBottom": 4,
            "width": 64,
          },
          {
            "backgroundColor": "#F3D9CE",
          },
        ]
      }
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#B5503C"
        importantForAccessibility="no-hide-descendants"
        name="person-outline"
        size={24}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "600",
            "lineHeight": 23.400000000000002,
          },
          {
            "color": "#14201B",
            "textAlign": "center",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      search:trust.profileNotFound
    </Text>
    <Pressable
      accessibilityLabel="common:actions.back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "disabled": false,
        }
      }
      disabled={false}
      onPress={[Function]}
      style={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontWeight": "600",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#14201B",
              },
            ]
          }
        >
          common:actions.back
        </Text>
      </View>
    </Pressable>
  </View>
</View>
`;

exports[`search/trust.tsx snapshots > renders the loading state 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 8,
          "paddingHorizontal": 16,
        },
        {
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
        {
          "borderBottomColor": "#E4EDFB",
          "borderBottomWidth": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 44,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "gap": 8,
            "minWidth": 40,
          }
        }
      >
        <Pressable
          accessibilityLabel="common:actions.back"
          accessibilityRole="button"
          hitSlop={8}
          onPress={[Function]}
          style={[Function]}
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#14201B"
            importantForAccessibility="no-hide-descendants"
            name="chevron-back"
            size={20}
          />
        </Pressable>
      </View>
      <View
        accessibilityRole="header"
        style={
          {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 23.400000000000002,
              },
              {
                "color": "#14201B",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          search:trust.title
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "minWidth": 40,
            },
            {
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
  <View
    accessibilityRole="progressbar"
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "gap": 12,
        }
      }
    >
      <Animated.View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "backgroundColor": "#E4EDFB",
              "borderRadius": 16,
              "height": 180,
              "opacity": AnimatedValue {
                "value": 0.45,
              },
              "width": "100%",
            },
            undefined,
          ]
        }
      />
      <View
        style={
          [
            {
              "borderRadius": 16,
              "borderWidth": 1,
              "gap": 12,
              "padding": 16,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
          ]
        }
      >
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 4,
                "height": 14.399999999999999,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "70%",
              },
              undefined,
            ]
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 4,
                "height": 8.4,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "35%",
              },
              undefined,
            ]
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 4,
                "height": 9.6,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "90%",
              },
              undefined,
            ]
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 4,
                "height": 9.6,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "80%",
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 12,
              "padding": 16,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
          ]
        }
      >
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#E4EDFB",
                "borderRadius": 9999,
                "height": 48,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": 48,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            {
              "flex": 1,
              "gap": 8,
            }
          }
        >
          <Animated.View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            style={
              [
                {
                  "backgroundColor": "#E4EDFB",
                  "borderRadius": 4,
                  "height": 8.4,
                  "opacity": AnimatedValue {
                    "value": 0.45,
                  },
                  "width": "45%",
                },
                undefined,
              ]
            }
          />
          <Animated.View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            style={
              [
                {
                  "backgroundColor": "#E4EDFB",
                  "borderRadius": 4,
                  "height": 8.4,
                  "opacity": AnimatedValue {
                    "value": 0.45,
                  },
                  "width": "30%",
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
